# zpool_prometheus

./: .gitignore  CMakeLists.txt  CMakeLists.ubuntu.txt  Dockerfile.ubuntu  LICENSE  README.md  serve_zpool_prometheus.py  zpool_prometheus.c
dashboards/: ZFS pool all queues read_write latency-1543763719212.json  ZFS pool read_write latency-1543763898830.json
